[project]
name = "dspant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesús Peñaloza", email = "jesus.penalozaa@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dask[complete]>=2025.1.0",
    "graphviz>=0.20.3",
    "hvplot>=0.11.2",
    "ipycytoscape>=1.3.3",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "pendulum>=3.0.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "ssqueezepy>=0.6.5",
    "tdt>=0.6.7",
    "zarr>=3.0.2",
]

[project.scripts]
dspant = "dspant:main"

[tool.maturin]
module-name = "dspant._core"
python-packages = ["dspant"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.5",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
]
cu124 = [
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
